:ambulance: fix(oui-loader): add centered alignment by default

--- a/packages/oui-loader/_mixins.less
+++ b/packages/oui-loader/_mixins.less
@@ -25,6 +25,7 @@
     }
 
     &__container {
+      margin: auto;
       display: block;
       position: relative;
       background: none;
